<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dark_mode"
            android:icon="@drawable/ic_moon"
            android:title="Dark Mode"
            app:actionLayout="@layout/menu_switch_layout" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user"
            android:title="My Profile" />
        <item
            android:id="@+id/nav_reported_items"
            android:icon="@drawable/ic_search_found"
            android:title="@string/myFoundReports" />
        <item
            android:id="@+id/nav_find_items"
            android:icon="@drawable/ic_search_lost"
            android:title="@string/my_lost_reports" />
        <item
            android:id="@+id/nav_resolved_items"
            android:icon="@drawable/ic_check_square"
            android:title="@string/my_resolved_items" />
        <item
            android:id="@+id/nav_admin_reports"
            android:icon="@drawable/ic_file_text"
            android:title="My Admin Reports" />
        <item
            android:id="@+id/nav_admin_dashboard"
            android:icon="@drawable/ic_layers"
            android:title="@string/menu_admin_dashboard"
            android:visible="false" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="Logout" />
        </menu>
    </item>
</menu>